<resources>
    <string name="app_name">DailyMedic</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="Kalender">Kalender</string>
    <string name="Plaene">Pläne</string>
    <string name="Medikamente">Medikamente</string>
    <string name="Bestellungen">Bestellungen</string>
    <string name="HeaderImage">Header Image</string>
    <string name="MaxMustermann">Max Mustermann</string>
    <string name="Kundennummer">Kundennummer: 0123456789</string>
    <string name="Home">Home</string>
    <string name="Menge">Menge</string>
    <string name="Medikament">Medikament</string>
    <string name="Bestellmenge">Bestellmenge</string>
    <string name="LieferungBestaetigen">Lieferung Bestätigen</string>
    <string name="LieferungStornieren">Lieferung stornieren</string>
    <string name="Start">Start</string>
    <string name="Reset">Reset</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="Next">Next</string>
    <string name="LogTitle">Medikamenten Log</string>
    <string name="Log">Log</string>
    <string name="logLoeschen">Log löschen</string>

    <dimen name="fontsize_text">8pt</dimen>
    <dimen name="fontsize_text_small">6pt</dimen>
</resources>