<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/navKalender"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/Kalender" />
    <item
        android:id="@+id/navPläne"
        android:icon="@drawable/ic_baseline_featured_play_list_24"
        android:title="@string/Plaene" />
    <item
        android:id="@+id/navMedikamente"
        android:icon="@drawable/ic_baseline_medication_24"
        android:title="@string/Medikamente" />
    <item
        android:id="@+id/navBestellungen"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/Bestellungen" />
    <item
        android:id="@+id/navLog"
        android:icon="@drawable/log"
        android:title="@string/Log" />
</menu>