<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="150dp"
            android:text="@string/_00_00_00"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/Timer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="200dp"
            android:text="@string/_00_00_00"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:label="@string/Medikament">

            <!--RecycleView-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvHomescreen"
                android:layout_width="250dp"
                android:layout_height="290dp"
                android:foregroundGravity="center" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/purple_500"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/Next"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="invisible"
            tools:visibility="visible" />
    </FrameLayout>

</LinearLayout>